# cpp-zeugma

./: .gitignore  .gitmodules  README.md  compile_shader.sh  film-config.toml  install_bgfx_tools.sh  jh-film-config.toml  maes-config.toml  meson.build  meson_options.txt
configs/: film-config.toml  half-hurd.toml  jh-film-config.toml  maes-config.toml  mattes.toml  seasonings-1.toml  seasonings-2.toml  seasonings-3.toml  seasonings-minimal.toml  seasonings.toml  window-config-4k.toml  window-config.toml
font/: cube_atlas.cpp  font_manager.cpp  fs_font_basic.sc  fs_font_basic.sc.bin.h  fs_font_distance_field.sc  fs_font_distance_field_subpixel.sc  makefile  text_buffer_manager.cpp  text_buffer_manager.h  vs_font_distance_field_subpixel.sc
src/: Alignifer.cpp  Alignifer.h  Animation.cpp  Animation.hpp  AnimationSystem.cpp  AnimationSystem.hpp  AtomicFreezone.cpp  AtomicFreezone.h  AudioMessenger.cpp  AudioMessenger.hpp  BlockTimer.hpp  Bolex.cpp  Bolex.h  CMVTrefoil.cpp  CMVTrefoil.h  CoGrappler.cpp  CoGrappler.h  Collage.cpp  Collage.hpp  DecodePipeline.cpp  DecodePipeline.hpp  FlatRenderable.cpp  FlatRenderable.hpp  FrameTime.cpp  FrameTime.hpp  Frontier.cpp  Frontier.hpp  GLFWWaterWorks.cpp  GLFWWaterWorks.hpp  GeomFumble.cpp  GeomFumble.h  GraphicsApplication.cpp  GraphicsApplication.hpp  Grappler.cpp  Grappler.h  GrapplerPile.cpp  GrapplerPile.h  GraumanPalace.cpp  GraumanPalace.h  GridRenderable.cpp  (+161 more)
src/shaders/: grid_fs.sc  grid_vs.sc  matte_video_fs.sc  matte_video_vs.sc  textured_renderable.fs.sc  textured_renderable.vs.sc  video_fs.sc  video_vs.sc
src/shaders/include/: over_up.sh  yuv.sh
ui-visuals/: bordered-circle-256.psd  bordered-circle-tridot-256.psd  bordered-empty-circle-tridot-256.psd
